modified swagger docs to include /api/v1/ in endpoint path
