# docs/swagger.json
@@ -24,7 +24,7 @@
                 }
             }
         },
-        "/table/{tableName}": {
+        "/api/v1/table/{tableName}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -78,7 +78,7 @@
                 }
             }
         },
-        "/table/{tableName}/{sysId}": {
+        "/api/v1/table/{tableName}/{sysId}": {
             "get": {
                 "consumes": [
                     "application/json"
